test/files/neg/warn-unused-implicits.check
warn-unused-implicits.scala:13: warning: parameter s in method f is never used
       )(implicit s: String): Int = {  // warn
                  ^
warn-unused-implicits.scala:33: warning: parameter s in method i is never used
  def i(implicit s: String, t: Int) = t           // yes, warn
                 ^
warn-unused-implicits.scala:52: warning: parameter ev in method ==> is never used
    def ==>[B](b: B)(implicit ev: BadCanEqual[A, B]): Boolean = a == b // warn, ev.run
                              ^
warn-unused-implicits.scala:60: warning: parameter m in method f is never used
  def f[A](implicit m: MembersOnly[A]) = toString.nonEmpty  // warn implicit trait with private member
                    ^
error: No warnings can be incurred under -Werror.
4 warnings
1 error
